Ensure layers are correctly stacked by adjusting z-index

--- a/assets/css/tasks.css
+++ b/assets/css/tasks.css
@@ -222,7 +222,7 @@ MODALS
   display: flex;
   justify-content: center;
   align-items: center;
-  z-index: 2;
+  z-index: 100;
   transition: opacity 0.4s ease-in-out, visibility 0.4s ease-in-out;
   /* initially hidden */
   opacity: 0;
@@ -247,7 +247,6 @@ MODALS
 }
 
 #details-modal-content h2 {
-  /* margin-right: 1rem; */
   width: 85%;
 }
 /* Form input styles */
